Ingress controller-setup.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 2
  selector:
    matchLables:
      name: nginx-ingress
  template:
    metadata:
    lables:
     name: nginx-ingress
     spec:
    containers:
    - name: nginx-ingress-container
      image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0
    args:
     - /nginx-ingress-controller
     - --configmap=haproxy-controller/nginx-configuration
  ports:
     - portname: http
       containerPort: 80
     - portname: https
       containerPort: 443
		  
---
apiVersion: v1
kind: Service
metadata:
name: nginx-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: nginx-ingress
