nodeport-setup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops
spec:
  replicase: 2
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
      - name: devops
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: devops
spec:
  type: ClusterIP
  selector:
    app: devops
  ports:
  - port: 80
    targetPort: 80
    
---
