stag-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stag
  namespace: stag
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stag
  template:
    metadata:
      labels:
        app: stag
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: dev
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
---
apiVersion: v1
kind: Service
metadata:
  name: stag
spec:
  type: ClusterIP
  selector:
    app: stag
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: dev-container
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
---
apiVersion: v1
kind: Service
metadata:
  name: dev
spec:
  type: ClusterIP
  selector:
    app: dev
  ports:
  - port: 80
    targetPort: 80
