ingress-resource-multihosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress-resource
  namespace: devops

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - prod.integrant.com
    - qc.integrant.com
    secretName: integrant-devops

  rules:
  - host: prod.integrant.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod
            port:
              number: 80
  - host: qc.integrant.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qc
            port:
              number: 80
