ingress-resource.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: prod.devops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod
            port: 
              number: 80
  - host: stag.devops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stag
            port: 
              number: 80
  - host: dev.devops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev
            port: 
              number: 80
  - host: qc.devops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qc
            port: 
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
